	PR c++/37389 	* decl.c (build_enumerator): Handle previous value's DECL_INITIAL 	being error_operand_p.  Don't clear value if it was error_mark_node.

* g++.dg/parse/enum4.C: New test.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@140165 138bc75d-0d04-0410-961f-82ee72b054a4